--- a/client/assets/css/style.css
+++ b/client/assets/css/style.css
@@ -176,7 +176,7 @@ body {
   color: hsl(0, 0%, 100%);
 }
 
-.helpline-box .icon-box ion-icon {
+.helpline-box .icon-box ion-icon , .modal-tab ion-icon{
   --ionicon-stroke-width: 40px;
 }
 
@@ -1044,3 +1044,117 @@ address {
   }
 
 }
+
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Полупрозрачный цвет фона */
+  display: none; /* Скрыть по умолчанию */
+  z-index: 1000; /* Выше других элементов */
+}
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  max-width: 80%; /* Максимальная ширина модального окна */
+  width: auto; /* Ширина модального окна */
+  display: none; /* Скрыть по умолчанию */
+}
+
+.modal-content {
+  text-align: center;
+}
+
+
+#registerModal .model-content, #model .model-content, .modal-form {
+  display: flex;
+  flex-direction: column;
+}
+
+select {
+  background-color: hsl(0, 0%, 100%);
+  border: 1px solid hsl(0, 0%, 80%);
+  border-radius: 5px;
+  padding: 10px 15px;
+  font-size: 14px;
+  color: hsl(0, 0%, 20%);
+}
+
+.modal-content button {
+  margin-bottom: 10px;
+}
+
+.modal-title {
+  margin-bottom: 20px;
+}
+
+.input-wrapper {
+  margin-bottom: 20px;
+}
+
+.input-label {
+  display: block;
+  font-size: 16px;
+  margin-bottom: 5px;
+}
+
+.input-field {
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+
+@media (max-width: 768px) {
+  .modal {
+    width: 90%; /* Уменьшение ширины модального окна для мобильных устройств */
+  }
+}
+
+.modal-tabs {
+  display: flex;
+  border-bottom: 1px solid #ccc; /* Добавляем подчеркивание */
+  margin-bottom: 10px; /* Отступ снизу */
+}
+
+.modal-tab {
+  padding: 10px 20px;
+  margin-right: 5px;
+  background-color: hsl(214, 57%, 51%);
+  color: #fff;
+  border: none;
+  border-radius: 5px 5px 0 0;
+  cursor: pointer;
+}
+
+
+.modal-tab.active {
+  background-color: hsl(214, 72%, 33%);
+}
+
+.modal-tab-content {
+  display: none;
+}
+
+.modal-tab-content.active {
+  display: block;
+}
+
+.column {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px; /* Отступ между колонками */
+}
+
